[project]
name = "hashflow-py"
version = "0.1.0"
authors = [
  { name="Sameer Brenn", email="sameer@hashflow.com" },
  { name="Hashflow Foundation" },
]
description = "An implementation of the Hashflow REST API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: ISC License",
    "Operating System :: OS Independent",
]
dependencies = ["requests"]

[project.urls]
"Homepage" = "https://github.com/hashflownetwork/taker-py"

[build.system]
requires = ["hatchling"]
build-backend = "hatchling.build"
