[project]
name = "hashflow"
version = "0.1.3"
authors = [
  { name="Sameer Brenn", email="sameer@hashflow.com" },
  { name="Hashflow Foundation" },
]
description = "An implementation of the Hashflow REST API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hashflownetwork/taker-py"

[build.system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
