[project]
name = "hashflow-taker-sdk"
version = "1.0.0"
authors = [
  { name="Hashflow Foundation" },
  { name="Sameer Brenn", email="sameer@hashflow.com" },
  { name="Victor Ionescu", email="victor@hashflow.com" }
]
description = "Python SDK to interact with the Hashflow Taker API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hashflownetwork/taker-py"

[build.system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
